--- a/Packages/RAD Studio XE6/VirtualTreesR.dproj
+++ b/Packages/RAD Studio XE6/VirtualTreesR.dproj
@@ -115,6 +115,7 @@
         <DCCReference Include="..\..\Source\VirtualTrees.WorkerThread.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
