--- a/Packages/RAD Studio XE4/VirtualTreesR.dproj
+++ b/Packages/RAD Studio XE4/VirtualTreesR.dproj
@@ -107,6 +107,7 @@
         <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
