--- a/Packages/RAD Studio XE2/VirtualTreesD.dproj
+++ b/Packages/RAD Studio XE2/VirtualTreesD.dproj
@@ -3,7 +3,7 @@
 			<ProjectGuid>{A34BA07B-19B6-4C21-9DEE-65FCA52D00AB}</ProjectGuid>
 			<MainSource>VirtualTreesD.dpk</MainSource>
 			<Base>True</Base>
-			<Config Condition="'$(Config)'==''">Debug</Config>
+			<Config Condition="'$(Config)'==''">Release</Config>
 			<AppType>Package</AppType>
 			<FrameworkType>VCL</FrameworkType>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
