--- a/Packages/RAD Studio XE2/VirtualTreesR.dproj
+++ b/Packages/RAD Studio XE2/VirtualTreesR.dproj
@@ -3,7 +3,7 @@
 			<ProjectGuid>{B62F3689-96E1-47D5-9FB2-2A2718281FDB}</ProjectGuid>
 			<MainSource>VirtualTreesR.dpk</MainSource>
 			<Base>True</Base>
-			<Config Condition="'$(Config)'==''">Debug</Config>
+			<Config Condition="'$(Config)'==''">Release</Config>
 			<AppType>Package</AppType>
 			<FrameworkType>VCL</FrameworkType>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
